# deepblu-python

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  README.md  bandit.toml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: branch.yml  release.yaml
deepblu/: __init__.py  di.py  result.py
deepblu/di/: __init__.py  dependency_module.py  injection.py  module.py  registry.py
deepblu/domain/: __init__.py  vo.py
deepblu/result/: __init__.py
di/: index.html
di/api-reference/: index.html
docs/: di.md
docs/css/: custom.css
docs/di/: api-reference.md  index.md  injection.md
docs/result/: api-reference.md  index.md
examples/: di.py
examples/di/: __init__.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/di/: index.html
site/search/: search_index.json
tests/: test_dddantic.py  test_deepblu.py  test_result.py
tests/test_di/: test_bindings.py  test_inject.py  test_injection.py  test_module.py
tests/test_domain/: test_password.py
tests/test_result/: test_result.py
